* Fix vertical align single selection at DropDown component - Vertical align of single selection was invalid if 'display' property changed to 'inline-block'

--- a/packages/jezvejs/src/Components/DropDown/style.scss
+++ b/packages/jezvejs/src/Components/DropDown/style.scss
@@ -171,6 +171,7 @@
   margin: 0;
   height: var(--dd-combo-content-height);
   min-height: var(--dd-combo-content-height);
+  line-height: var(--dd-combo-content-height);
   align-items: center;
   background-color: var(--dd-bg-color);
   color: var(--dd-selection-text);
